fix(web): drop --enable-preview flag, fix quote-to-blockquote ordering
JDK 25 no longer needs --enable-preview. Move quoteToBlockquote() call
before encloseEnv() to prevent ] line stripping from consuming quote
closings.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>